--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -12,6 +12,14 @@ h2 {
   text-transform: uppercase;
 }
 
+h3 {
+  font-size: 1.3em;
+}
+
+iframe {
+  z-index: 1;
+}
+
 .header {
   width: 100%;
   height: 4em;
@@ -58,6 +66,16 @@ h2 {
     font-weight: 500;
   }
 
+  &__link {
+    color: $light;
+    transition: color 1s ease;
+
+    &:hover {
+      color: $accent;
+      transition: color 0.2s;
+    }
+  }
+
   &__span {
     font-size: 0.9em;
     font-weight: 300;
@@ -89,14 +107,15 @@ h2 {
     right: 0;
     left: 0;
   }
+}
 
-  img {
-    position: absolute;
-    background-color: gray;
-    height: 100%;
-    z-index: -1;
-    object-fit: cover;
-  }
+.container > img,
+.wrapper > img {
+  position: absolute;
+  background-color: gray;
+  height: 100%;
+  z-index: -1;
+  object-fit: cover;
 }
 
 .wrapper {
@@ -107,6 +126,15 @@ h2 {
   z-index: 2;
   color: $light;
   gap: 2em;
+}
+
+.headings {
+  border-top: 0.15em solid $accent;
+  width: 20%;
+  @include flexBox($ff: column nowrap);
+  text-align: center;
+  padding: 1em 0 0;
+  white-space: nowrap;
 }
 
 .intro {
@@ -131,26 +159,16 @@ h2 {
 }
 
 .intro__list,
+.about__list,
 .footer__list {
   @include flexBox($ff: column nowrap);
   gap: 0.3em;
   font-family: $sec-font;
+  text-align: center;
 }
 
 .btn {
   @include btn;
-}
-
-.welcome,
-.contact,
-.footer {
-  &__headings {
-    border-top: 0.15em solid $accent;
-    width: 20%;
-    @include flexBox;
-    text-align: center;
-    padding: 1em 0 0;
-  }
 }
 
 .gallery {
@@ -159,6 +177,8 @@ h2 {
 
   &__wrapper {
     position: relative;
+    overflow: hidden;
+    transition: all 1s;
 
     &::before {
       content: '';
@@ -170,6 +190,17 @@ h2 {
       right: 0;
       left: 0;
     }
+
+    &:hover {
+      transition: all 0.2s;
+      color: $accent;
+    }
+
+    &:hover .gallery__img {
+      transition: all 0.2s;
+      transform: scale(1);
+      filter: brightness(1.2);
+    }
   }
 
   &__headings {
@@ -180,6 +211,11 @@ h2 {
     @include flexBox;
     text-align: center;
     padding: 1em 0;
+  }
+
+  &__img {
+    transform: scale(1.1);
+    transition: all 1s;
   }
 }
 
@@ -200,10 +236,118 @@ h2 {
     border-bottom: 0.01em solid $accent;
     padding: 0.3em 1em;
     font-family: $sec-font;
+    outline: none;
   }
 
   textarea {
     height: 8em;
+  }
+}
+
+.grid3 {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  width: 100%;
+  gap: 2em;
+  align-items: start;
+  justify-content: center;
+}
+
+.mate {
+  width: 100%;
+  height: 100%;
+  @include flexBox($ff: column nowrap, $jc: flex-start);
+  gap: 1em;
+
+  &__picture {
+    width: 100%;
+    height: 12em;
+    overflow: hidden;
+    position: relative;
+  }
+
+  &__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  &__info {
+    @include flexBox($ff: column nowrap);
+    gap: 0.5em;
+  }
+
+  &__span {
+    font-size: 0.9em;
+  }
+}
+
+.services {
+  &__grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1em;
+  }
+}
+
+.service {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  gap: 1em;
+
+  &__number {
+    border: 0.15em solid $light;
+    height: 3em;
+    width: 100%;
+    @include flexBox;
+    font-weight: 700;
+    font-size: 1.2em;
+  }
+}
+
+.news {
+  &__list {
+    @include flexBox($ff: column nowrap);
+    gap: 2em;
+  }
+
+  &__item {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 1em;
+  }
+
+  &__picture {
+    width: 100%;
+    height: 12em;
+    overflow: hidden;
+  }
+
+  &__img {
+    background-color: gray;
+    height: 100%;
+    object-fit: cover;
+  }
+}
+
+.add {
+  &__list {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 0.8em;
+    text-align: center;
+  }
+}
+
+.offers {
+  &__item {
+    @include flexBox($ff: column nowrap);
+    gap: 1em;
+  }
+
+  &__span {
+    text-align: start;
   }
 }
 
