--- a/src/css/index.css
+++ b/src/css/index.css
@@ -147,6 +147,8 @@ iframe {
   top: 0;
   z-index: 3;
   border-bottom: 0.15em solid rgba(255, 255, 255, 0.1176470588);
+  white-space: nowrap;
+  overflow: hidden;
 }
 .header__logo {
   width: 100%;
@@ -408,7 +410,6 @@ iframe {
   width: 100%;
   height: 12em;
   overflow: hidden;
-  position: relative;
 }
 .mate__img {
   width: 100%;
@@ -499,6 +500,76 @@ iframe {
 .footer__legal {
   color: #eead31;
   font-weight: 600;
+}
+
+@media (max-width: 868px) {
+  h2 {
+    white-space: pre-wrap;
+  }
+  .header {
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: center;
+    padding: 1em;
+    overflow: visible;
+    position: relative;
+  }
+  .header__span {
+    grid-area: 1/2;
+    text-align: center;
+  }
+  .header__nav {
+    justify-content: flex-end;
+  }
+  .header__menu {
+    display: none;
+  }
+  .header__item {
+    padding: 0 0.2em;
+  }
+  .header__btn {
+    display: flex;
+    color: #ffffff;
+  }
+  .open {
+    display: flex;
+    position: absolute;
+    top: 3em;
+    right: 0;
+    background-color: #1f1d1c;
+    width: 40%;
+    height: 20em;
+    justify-content: space-evenly;
+    align-items: flex-end;
+    flex-flow: column nowrap;
+    padding-right: 1em;
+    font-size: 1.2em;
+  }
+}
+@media (max-width: 425px) {
+  .wrapper {
+    width: 100%;
+    max-width: 20em;
+  }
+  .container {
+    padding: 2em 0;
+  }
+  .gallery {
+    grid-template-columns: 1fr;
+  }
+  .gallery__wrapper {
+    height: 12em;
+    width: 100%;
+    max-width: unset;
+  }
+  .team__mates,
+  .services__grid,
+  .offers__grid,
+  .news__item {
+    grid-template-columns: 1fr;
+  }
+  .add__list {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 /*# sourceMappingURL=index.css.map */
