--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -34,6 +34,8 @@ iframe {
   top: 0;
   z-index: 3;
   border-bottom: 0.15em solid $acrylic-light;
+  white-space: nowrap;
+  overflow: hidden;
 
   &__logo {
     width: 100%;
@@ -263,7 +265,6 @@ iframe {
     width: 100%;
     height: 12em;
     overflow: hidden;
-    position: relative;
   }
 
   &__img {
@@ -361,5 +362,88 @@ iframe {
   &__legal {
     color: $accent;
     font-weight: 600;
+  }
+}
+
+@media (max-width: 868px) {
+  h2 {
+    white-space: pre-wrap;
+  }
+
+  .header {
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: center;
+    padding: 1em;
+    overflow: visible;
+    position: relative;
+
+    &__span {
+      grid-area: 1/2;
+      text-align: center;
+    }
+
+    &__nav {
+      justify-content: flex-end;
+    }
+
+    &__menu {
+      display: none;
+    }
+
+    &__item {
+      padding: 0 0.2em;
+    }
+
+    &__btn {
+      display: flex;
+      color: $light;
+    }
+  }
+
+  .open {
+    display: flex;
+    position: absolute;
+    top: 3em;
+    right: 0;
+    background-color: $dark;
+    width: 40%;
+    height: 20em;
+    justify-content: space-evenly;
+    align-items: flex-end;
+    flex-flow: column nowrap;
+    padding-right: 1em;
+    font-size: 1.2em;
+  }
+}
+
+@media (max-width: 425px) {
+  .wrapper {
+    width: 100%;
+    max-width: 20em;
+  }
+
+  .container {
+    padding: 2em 0;
+  }
+
+  .gallery {
+    grid-template-columns: 1fr;
+
+    &__wrapper {
+      height: 12em;
+      width: 100%;
+      max-width: unset;
+    }
+  }
+
+  .team__mates,
+  .services__grid,
+  .offers__grid,
+  .news__item {
+    grid-template-columns: 1fr;
+  }
+
+  .add__list {
+    grid-template-columns: repeat(2, 1fr);
   }
 }
